@@ -153,6 +153,10 @@ target_link_libraries(sms-nokia-06 libGammu)
 target_link_libraries(sms-nokia-06 messagedisplay)
 add_test(sms-nokia-06 "${GAMMU_TEST_PATH}/sms-nokia-06${GAMMU_TEST_SUFFIX}")
 
+add_executable(sms-nokia-07 sms-nokia-07.c)
+target_link_libraries(sms-nokia-07 libGammu)
+add_test(sms-nokia-07 "${GAMMU_TEST_PATH}/sms-nokia-07${GAMMU_TEST_SUFFIX}")
+
 # Nokia ringtone
 add_executable(nokia-6110-ringtone nokia-6110-ringtone.c)
 target_link_libraries(nokia-6110-ringtone libGammu)
